--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-    <h1>Welcome to the Sentiment Analysis App</h1>
+    <h1>Sentiment Analysis Demo</h1>
+    <p>Web app practice project that analyzes text sentiment as positive or negative using a simple machine learning
+        model. Currently, it does not account for punctuation.</p>
     <form action="/predict" method="POST">
         <label for="user_text">Enter Text:</label><br><br>
         <textarea name="user_text" rows="6" cols="60"></textarea><br><br>
