--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 
 <body>
     <h1>Sentiment Analysis Demo</h1>
-    <p>Web app practice project that analyzes text sentiment as positive or negative using a simple machine learning
-        model. Currently, it does not account for punctuation.</p>
+    <p>Practice project that analyzes text sentiment as positive or negative using a simple machine learning
+        model. Does not currently account for punctuation.</p>
     <form action="/predict" method="POST">
         <label for="user_text">Enter Text:</label><br><br>
         <textarea name="user_text" rows="6" cols="60"></textarea><br><br>
